# gaitanalysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
asdrp/: __init__.py  pipeline.py
asdrp/analysis/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  cadence.py  metrics.py  stride.py  symmetry.py
asdrp/pose/: __init__.py  base.py  estimator.py  landmarker.py  tracker.py
asdrp/utils/: __init__.py  config.py  geometry.py  smoothing.py
asdrp/video/: __init__.py  frame.py  reader.py  writer.py
asdrp/visualization/: API.md  FEATURES.md  QUICKSTART.md  README.md  __init__.py  overlay.py  plots.py  report.py
data/outputs/: gait_analysis_report.txt  gait_metrics.csv  joint_angles.csv
notebooks/: README.md  gait_analysis_demo.ipynb
